individual modality models created and tested

--- a/Code/CS598JP-CourseProject.ipynb
+++ b/Code/CS598JP-CourseProject.ipynb
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -738,95 +738,115 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 440 out of 440 | elapsed:    7.0s finished\n",
-      "/home/ksaboo/anaconda3/lib/python3.6/site-packages/sklearn/model_selection/_search.py:841: DeprecationWarning: The default of the `iid` parameter will change from True to False in version 0.22 and will be removed in 0.24. This will change numeric results when test-set sizes are unequal.\n",
-      "  DeprecationWarning)\n"
+      "[Parallel(n_jobs=1)]: Done 440 out of 440 | elapsed:    6.9s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "index 1 is out of bounds for axis 0 with size 1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-271-f8657ceca552>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mgs_num_cv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcsfout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodalityModelTrainWrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'random_forest'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'csf'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtraining_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgs_num_cv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0marbit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtesting_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtesting_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'csf_01'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m!=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcsf_columns\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcsfout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'model'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marbit\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcsfout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'features'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mcsfout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'train_mod_mean'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mcsfout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'train_mod_std'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marbit\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'DX_bin'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-268-f24e53a48a09>\u001b[0m in \u001b[0;36mmodalityModelTrainWrapper\u001b[0;34m(classifier_name, modality_name, train_df, num_cv)\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0;31m# perform parameter sweep for classifier and train model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m     gridout = adens.gridSearchWrapper(classifier_name, param_grid, num_cv, train_X_zs, \n\u001b[0;32m---> 33\u001b[0;31m                                           train_modalitydf['DX_bin'], dummy_test_X, dummy_test_Y)\n\u001b[0m\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m     return {'model':gridout['model'], 'features':modality_features,\n",
-      "\u001b[0;32m/media/UIUC Courses/Sem 5/CS598JP/Project/Code/adniEnsemble.py\u001b[0m in \u001b[0;36mgridSearchWrapper\u001b[0;34m(classifier_name, paramdict, num_cv, train_X, train_Y, test_X, test_Y)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m     \u001b[0;31m# test model - test data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m     \u001b[0msensitivity_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspecificity_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSensiSpeci\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_Y\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmlmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_X\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m     \u001b[0maccuracy_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mmlmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_X\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_Y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m     \u001b[0mf1_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf1_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_Y\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmlmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_X\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/media/UIUC Courses/Sem 5/CS598JP/Project/Code/adniEnsemble.py\u001b[0m in \u001b[0;36mSensiSpeci\u001b[0;34m(true_labels, predicted_labels)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mSensiSpeci\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrue_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredicted_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mconfmat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconfusion_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrue_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredicted_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0msensitivity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mconfmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mconfmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# TP/(FN+TP)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m     \u001b[0mspecificity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mconfmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mconfmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# TN/(TN+FP)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0msensitivity\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspecificity\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 1 is out of bounds for axis 0 with size 1"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 10 folds for each of 44 candidates, totalling 440 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done 440 out of 440 | elapsed:    8.8s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 10 folds for each of 44 candidates, totalling 440 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done 440 out of 440 | elapsed:    5.9s finished\n"
      ]
     }
    ],
    "source": [
+    "# train model for each modality\n",
     "gs_num_cv = 10\n",
     "csfout = modalityModelTrainWrapper('random_forest', 'csf', training_df, gs_num_cv)\n",
-    "\n",
-    "arbit = testing_df.loc[(testing_df['csf_01']!=-1), csf_columns]\n",
-    "csfout['model'].score((arbit[csfout['features']]-csfout['train_mod_mean'])/csfout['train_mod_std'], arbit['DX_bin'])"
+    "fdgout = modalityModelTrainWrapper('random_forest', 'fdg', training_df, gs_num_cv)\n",
+    "petout = modalityModelTrainWrapper('random_forest', 'pet', training_df, gs_num_cv)\n",
+    "amyloidout = modalityModelTrainWrapper('logistic_regression', 'amyloid', training_df, gs_num_cv)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 283,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/media/UIUC Courses/Sem 5/CS598JP/Project/Code/adniEnsemble.py:22: RuntimeWarning: invalid value encountered in long_scalars\n",
-      "  specificity = 100*confmat[0,0]/(confmat[0,0]+confmat[0,1]) # TN/(TN+FP)\n",
-      "/home/ksaboo/anaconda3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1143: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
+      "CSF: 0.8120\n",
+      "FDG: 0.8360\n",
+      "PET: 0.7163\n",
+      "Amyloid: 0.8433\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.8514150943396226"
-      ]
-     },
-     "execution_count": 262,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "gs_num_cv = 10\n",
-    "amyloidout = modalityModelTrainWrapper('logistic_regression', 'amyloid', training_df, gs_num_cv)\n",
+    "# test csf model\n",
+    "aux_vars = ['Gender','Age','Educ','APOE', 'DX_bin']\n",
     "\n",
-    "amyloid_columns = [item for sublist in [['Gender','Age','Educ','APOE', 'DX_bin'], amyloid_vars] for item in sublist]\n",
+    "csf_columns = [item for sublist in [aux_vars, csf_vars] for item in sublist]\n",
+    "arbit = testing_df.loc[(testing_df['csf_01']!=-1), csf_columns]\n",
+    "print(\"CSF: %.04f\" % \n",
+    "      csfout['model'].score((arbit[csfout['features']]-csfout['train_mod_mean'])/csfout['train_mod_std'], arbit['DX_bin']))\n",
+    "\n",
+    "# test fdg model\n",
+    "fdg_columns = [item for sublist in [aux_vars, fdg_vars] for item in sublist]\n",
+    "arbit = testing_df.loc[(testing_df['fdg_01']!=-1), fdg_columns]\n",
+    "print(\"FDG: %.04f\" % \n",
+    "      fdgout['model'].score((arbit[fdgout['features']]-fdgout['train_mod_mean'])/fdgout['train_mod_std'], arbit['DX_bin']))\n",
+    "\n",
+    "# test pet model\n",
+    "pet_columns = [item for sublist in [aux_vars, pet_vars] for item in sublist]\n",
+    "arbit = testing_df.loc[(testing_df['pet_01']!=-1), pet_columns]\n",
+    "print(\"PET: %.04f\" % \n",
+    "      petout['model'].score((arbit[petout['features']]-petout['train_mod_mean'])/petout['train_mod_std'], arbit['DX_bin']))\n",
+    "\n",
+    "# test amyloid\n",
+    "amyloid_columns = [item for sublist in [aux_vars, amyloid_vars] for item in sublist]\n",
     "arbit = testing_df.loc[(testing_df['amyloid_01']!=-1), amyloid_columns]\n",
-    "amyloidout['model'].score((arbit[amyloidout['features']]-amyloidout['train_modality_mean'])/amyloidout['train_modality_std'], arbit['DX_bin'])"
+    "print(\"Amyloid: %.04f\" % \n",
+    "      amyloidout['model'].score((arbit[amyloidout['features']]-amyloidout['train_mod_mean'])/amyloidout['train_mod_std'], arbit['DX_bin']))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[-0.51555619,  0.05008728, -0.34983019,  0.30440661, -0.14134136,\n",
-       "        -0.26482642, -0.71819857,  0.13972011,  2.60644087, -0.2558909 ]])"
-      ]
-     },
-     "execution_count": 266,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1105\n"
+     ]
     }
    ],
    "source": [
-    "amyloidout['model'].coef_"
+    "print(len(testing_df) - len(testing_df.loc[(testing_df['mri_001']==-1)&(testing_df['amyloid_01']==-1)&(testing_df['fdg_01']==-1)&(testing_df['csf_01']==-1)&(testing_df['pet_01']==-1)]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,12 +877,10 @@
     "    train_modality_std = train_modalitydf[modality_features].std()\n",
     "    train_X_zs = (train_modalitydf[modality_features]-train_modality_mean)/train_modality_std\n",
     "    \n",
-    "    dummy_test_X = train_X_zs.iloc[0:2]\n",
-    "    dummy_test_Y = train_modalitydf.iloc[0:2].DX_bin\n",
-    "    \n",
     "    # perform parameter sweep for classifier and train model\n",
+    "    # NOTE: I'm passing training data as testing in the function since this function is used just to train the model\n",
     "    gridout = adens.gridSearchWrapper(classifier_name, param_grid, num_cv, train_X_zs, \n",
-    "                                          train_modalitydf['DX_bin'], dummy_test_X, dummy_test_Y)\n",
+    "                                          train_modalitydf['DX_bin'], train_X_zs, train_modalitydf['DX_bin'])\n",
     "\n",
     "    return {'model':gridout['model'], 'features':modality_features,\n",
     "            'train_mod_mean':train_modality_mean, 'train_mod_std':train_modality_std}\n"
