testing data to have at least one modality

--- a/Code/CS598JP-CourseProject.ipynb
+++ b/Code/CS598JP-CourseProject.ipynb
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,8 @@
     "training_df, testing2_df = train_test_split(adnidf, test_size=0.2, shuffle=True)\n",
     "\n",
     "# all rows that are AD/CN, Education present and no MRI scans\n",
-    "testing1_df = adnifulldf.loc[(adnifulldf[\"DX\"].isin(dx_stages)) & (adnifulldf[\"Educ\"] != -1) & (adnifulldf[\"mri_001\"] == -1)].copy()\n",
+    "testing1_df = adnifulldf.loc[(adnifulldf[\"DX\"].isin(dx_stages)) & (adnifulldf[\"Educ\"] != -1) & (adnifulldf[\"mri_001\"] == -1) &\n",
+    "                  ((adnifulldf[\"csf_01\"] != -1)|(adnifulldf[\"pet_01\"] != -1)|(adnifulldf[\"fdg_01\"] != -1)|(adnifulldf[\"amyloid_01\"] != -1))].copy()\n",
     "testing1_df[\"DX_bin\"] = np.where(testing1_df[\"DX\"] == \"CN\", 0, 1) # CN: 0, AD: 1\n",
     "\n",
     "# combine test data\n",
@@ -440,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
@@ -449,10 +450,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSF: 0.7747\n",
-      "FDG: 0.8500\n",
-      "PET: 0.6947\n",
-      "Amyloid: 0.8364\n"
+      "CSF: 0.7980\n",
+      "FDG: 0.8830\n",
+      "PET: 0.7025\n",
+      "Amyloid: 0.8475\n"
      ]
     }
    ],
@@ -651,15 +652,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "760/760 [==============================] - 0s 29us/step\n",
-      "Test accuracy is: 97.50%\n"
+      "760/760 [==============================] - 0s 14us/step\n",
+      "Test accuracy is: 98.95%\n"
      ]
     }
    ],
@@ -671,20 +672,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1105\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(testing_df) - len(testing_df.loc[(testing_df['mri_001']==-1)&(testing_df['amyloid_01']==-1)&(testing_df['fdg_01']==-1)&(testing_df['csf_01']==-1)&(testing_df['pet_01']==-1)]))"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
